# cpp_labs

lab1/: CMakeLists.txt  main.cpp
lab1/Boost_tests/: CMakeLists.txt  circle_tests.cpp
lab1/Doctests/: CMakeLists.txt  fractionTests.cpp
lab1/Google_tests/: CMakeLists.txt  bookTests.cpp
lab1/book/: BookLibrary.cpp  BookLibrary.h  CMakeLists.txt  book.cpp  book.h
lab1/circle/: CMakeLists.txt  Circle.cpp  Circle.h  CircleService.cpp  CircleService.h
lab1/fraction/: CMakeLists.txt  Fraction.cpp  Fraction.h  FractionService.cpp  FractionService.h
lab2/: CMakeLists.txt
lab2/Google_tests/: CMakeLists.txt  computerTests.cpp  trainTests.cpp
lab2/computer/: CMakeLists.txt  CPU.cpp  CPU.h  Component.cpp  Component.h  ComputerService.cpp  ComputerService.h  DiskDrive.cpp  DiskDrive.h  HardDrive.cpp  HardDrive.h  RAM.cpp  RAM.h  computer.cpp  computer.h
lab2/trains/: CMakeLists.txt  PassengerWagon.cpp  PassengerWagon.h  Train.cpp  Train.h  TrainService.cpp  TrainService.h  Wagon.cpp  Wagon.h
lab3/: CMakeLists.txt
lab3/Google_tests/: CMakeLists.txt  cityTests.cpp
lab3/Google_tests/lib/googlemock/include/gmock/: gmock-spec-builders.h
lab3/city/: CMakeLists.txt  City.cpp  City.h  CityService.cpp  CityService.h
lab4/: CMakeLists.txt  main.cpp
lab4/Google_tests/: CMakeLists.txt  bracketsTests.cpp  listsTests.cpp
lab4/brackets/: BracketsService.h  CMakeLists.txt
lab4/lists/: CMakeLists.txt  FileReader.cpp  FileReader.h  ListService.h  ObjectInfo.cpp  ObjectInfo.h
lab5/: CMakeLists.txt
lab5/Google_tests/: CMakeLists.txt  stringServiceTests.cpp
lab5/strings/: CMakeLists.txt  FileReader.cpp  FileReader.h  StringService.cpp  StringService.h
lab6/: CMakeLists.txt
lab6/Google_tests/: CMakeLists.txt  file_tests.cpp  taskA_tests.cpp  taskB_tests.cpp  taskC_tests.cpp
lab6/Google_tests/lib/googletest/include/gtest/internal/: gtest-internal.h
lab6/Google_tests/lib/googletest/test/: googletest-printers-test.cc
lab6/files/: CMakeLists.txt  FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h  Zipper.cpp  Zipper.h
lab6/taskA/: CMakeLists.txt  StringService.cpp  StringService.h
lab6/taskB/: CMakeLists.txt  PassengerWagon.cpp  PassengerWagon.h  Serializer.cpp  Serializer.h  Train.h  TrainService.cpp  TrainService.h  Wagon.h
lab6/taskC/: CMakeLists.txt  FileReverser.cpp  FileReverser.h
